# parametric

./: Cargo.toml  LICENSE-MIT  README.md
parametric/: .gitignore  Cargo.toml
parametric/examples/: derive_cap.rs  mlp.rs
parametric/src/: impls.rs  lib.rs
parametric/src/impls/: container.rs  foreign.rs  primitive.rs
parametric_derive/: Cargo.toml
parametric_derive/src/: lib.rs  parametric.rs
