[package]
name = "parametric_derive"
version = "0.1.0"
edition = "2024"
authors = ["Ilya Lisunov <huggbeat@gmail.com>"]
homepage = "https://github.com/ogau/parametric"
repository = "https://github.com/ogau/parametric"
description = "A derive macro to bridge complex, hierarchical data structures with optimization algorithms that use flat parameter vectors."
categories = ["rust-patterns", "mathematics", "science", "simulation", "development-tools::procedural-macro-helpers"]
keywords = [
  "proc_macro", "derive", "metaprogramming",
  "optimization", "parametrization",
]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
name = "parametric_derive"
proc-macro = true

[dependencies]
syn = { workspace = true, default-features = true }
quote = { workspace = true, default-features = true }
proc-macro2 = { workspace = true, default-features = true }
